# insuranceCalc_ms

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build_docker_image.yml  lint_unit_integration_on_push_pr.yml
app/: .dockerignore  .env.template  Dockerfile  alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 2024_12_01_0457-b9e8811c69fc_create_insurance_rates_table.py  2024_12_01_2058-d21b4a610a73_create_insurance_rates_table.py  2024_12_01_2250-6859e6dd236e_create_insurance_rates_table.py  2024_12_06_0330-02b902253a0e_create_insurance_action_logs_table.py
app/api/v1/: __init__.py  deps.py
app/api/v1/routes/: administration.py  insurance_calc.py  rate.py
app/api/v1/schemas/: __init__.py  insurance_calc.py  rate.py
app/core/: __init__.py  config.py
app/crud/: rate.py
app/db/: __init__.py  db_helper.py
app/db/model/: __init__.py  rate.py
app/db/models/: rate.py
app/imports/: README.md  import_rates.json
app/services/: kafka.py
app/utils/: files_utils.py
consumer_service/log_consumer/: .env.template  Dockerfile  alembic.ini  main.py
consumer_service/log_consumer/alembic/: env.py
consumer_service/log_consumer/api/v1/: __init__.py
consumer_service/log_consumer/api/v1/routes/: logs.py
consumer_service/log_consumer/api/v1/schemas/: __init__.py  logs.py
consumer_service/log_consumer/core/: config.py
consumer_service/log_consumer/crud/: logs.py
consumer_service/log_consumer/db/: __init__.py  db_helper.py
consumer_service/log_consumer/db/models/: insurance_action_log.py
consumer_service/log_consumer/services/: kafka.py
docker_compose_envs/: insurance_calc.env
log_consumer/: alembic.ini  main.py
log_consumer/db/: __init__.py
log_consumer/db/models/: __init__.py  insurance_action_log.py
main_service/app/: .dockerignore  Dockerfile  main.py
main_service/app/api/v1/: deps.py
main_service/app/api/v1/routes/: administration.py  rate.py
main_service/app/core/: __init__.py
main_service/app/services/: kafka.py
main_service/app/utils/: files_utils.py
tests/integration/: conftest.py  containers.py  database.py  factories.py  test_api_v1_administration.py  test_api_v1_insurance_calc.py  test_api_v1_rates.py
tests/unit/: conftest.py  test_api_v1_routes_insurance_calc.py  test_api_v1_routes_rate.py  test_crud_rate.py  test_services_kafka.py  test_utils_files_utils.py
