[tool.poetry]
name = "insurancecalc"
version = "0.1.0"
description = ""
authors = ["jam089 <jam089@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = {extras = ["asyncaio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
aiokafka = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
